bund Menu er vist done, samt står der noget på studirkort og indstillinger

--- a/StudizPrototype/app/src/main/res/values/strings.xml
+++ b/StudizPrototype/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="hjemmeside">Gå til hjemmeside</string>
     <string name="maps">Maps</string>
+    <string name="title_activity_kategorier">MainActivity</string>
 </resources>
