--- a/StudizPrototype/app/src/main/res/values/strings.xml
+++ b/StudizPrototype/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="Studiekort">Studiekort</string>
     <string name="settings">Indstillinger</string>
     <string name="hjemmeside">Brug rabat</string>
+    <string name="Studizfrontpage">For Students By Student</string>
+    <string name="studiz">Studiz</string>
+    <string name="login">Opret Konto</string>
 </resources>
