Søgefunktion layout done

--- a/StudizPrototype/app/src/main/res/values/strings.xml
+++ b/StudizPrototype/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="Studizfrontpage">For Students By Student</string>
     <string name="studiz">Studiz</string>
     <string name="login">Opret Konto</string>
+    <string name="search">Søg</string>
 </resources>
